--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="es">
 <head>
  <meta charset="UTF-8">
- <title>Página Principal</title>
+ <title>Página Principal nuevo nombre</title>
 </head>
 <body>
  <h1>Bienvenidos a Mi Proyecto</h1>
  <p>Este es mi primer archivo HTML gestionado con Git.</p>
+ <p>cambios nuevos prueba</p>
 </body>
 </html>
