Cambios para practicar revertir cambios

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
  <h1>Bienvenidos a Mi Proyecto</h1>
  <p>Este es mi primer archivo HTML gestionado con Git.</p>
  <p>cambios nuevos prueba</p>
+ <p>Practicar para hacer el revertir cambios</p>
 </body>
 </html>
